G8_Eclipse/src/parser/G8Parser.java
package parser;

// $ANTLR 3.5.1 D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g 2019-06-26 16:12:33

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.io.IOException;
import java.util.ArrayList;
import start.G8;

@SuppressWarnings("all")
public class G8Parser extends Parser {
	
	String Titolo;
	String Name="No Name";
	float DrawspaceWidth;
	float DrawspaceHeigth;
	ArrayList<String> names = new ArrayList<String>();
	
	public class SameNameError extends Exception {

		 SameNameError()
		  {
		    super("Attention, you have inserted the same name for more than one figure");
		  }
	}
	
	public class ShapeLayoutError extends Exception {

		ShapeLayoutError()
		  {
		    super("Attention, coordinates of a figure are incorrect");
		  }
	}
	
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "FLOAT", "RGB", "ROTATION", 
		"TEXT", "WS", "'CIRC:'", "'COLOR'", "'COLORBODY'", "'CURV:'", "'DRAWSPACE HEIGTH'", 
		"'DRAWSPACE WIDTH'", "'ELLIPS:'", "'END'", "'ENDANGLE'", "'LINE:'", "'NAME'", 
		"'RADIUS'", "'RECT:'", "'ROTATION'", "'SEMAX'", "'SEMIN'", "'STARTANGLE'", 
		"'TITLE'", "'TRIANGLE:'", "'WIDTH'", "'XA'", "'XB'", "'XC'", "'XCENTER'", 
		"'XEND'", "'XMIDDLE'", "'XSTART'", "'YA'", "'YB'", "'YC'", "'YCENTER'", 
		"'YEND'", "'YMIDDLE'", "'YSTART'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int COMMENT=4;
	public static final int FLOAT=5;
	public static final int RGB=6;
	public static final int ROTATION=7;
	public static final int TEXT=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public G8Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public G8Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return G8Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g"; }



	// $ANTLR start "begin"
	// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:3:1: begin : 'TITLE' b1= TEXT 'DRAWSPACE WIDTH' b2= FLOAT 'DRAWSPACE HEIGTH' b3= FLOAT ( list )* end ;
	public final void begin() throws RecognitionException, IOException, SameNameError, ShapeLayoutError {
		Token b1=null;
		Token b2=null;
		Token b3=null;

		try {
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:3:7: ( 'TITLE' b1= TEXT 'DRAWSPACE WIDTH' b2= FLOAT 'DRAWSPACE HEIGTH' b3= FLOAT ( list )* end )
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:3:9: 'TITLE' b1= TEXT 'DRAWSPACE WIDTH' b2= FLOAT 'DRAWSPACE HEIGTH' b3= FLOAT ( list )* end
			{
			match(input,27,FOLLOW_27_in_begin10); 
			b1=(Token)match(input,TEXT,FOLLOW_TEXT_in_begin14); 
			Titolo=(b1!=null?b1.getText():null);
			match(input,15,FOLLOW_15_in_begin18); 
			b2=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_begin22); 
			DrawspaceWidth=Float.valueOf((b2!=null?b2.getText():null));
			match(input,14,FOLLOW_14_in_begin26); 
			b3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_begin30); 
			DrawspaceHeigth=Float.valueOf((b3!=null?b3.getText():null));
			
			G8.writeFile("<!doctype html>");
			G8.writeFile("<html>");
			G8.writeFile("<head>");
			G8.writeFile("<title> " + Titolo + " </title>");
			G8.writeFile("<style> canvas {border: 1px #000 dotted;} </style>");
			G8.writeFile("<script>");
			G8.writeFile("window.onload = function () {\n");
			G8.writeFile("	var canvas = document.getElementById('" + Titolo + "');");
			G8.writeFile("	var context = canvas.getContext('2d'); \n");
			
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:3:154: ( list )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==10||LA1_0==13||LA1_0==16||LA1_0==19||LA1_0==22||LA1_0==28) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:3:155: list
					{
					pushFollow(FOLLOW_list_in_begin35);
					list();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			pushFollow(FOLLOW_end_in_begin39);
			end();
			state._fsp--;
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "begin"



	// $ANTLR start "list"
	// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:1: list : ( line | triangle | rectangle | curve | circle | ellipse );
	public final void list() throws RecognitionException, IOException, SameNameError, ShapeLayoutError {
		try {
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:6: ( line | triangle | rectangle | curve | circle | ellipse )
			int alt2=6;
			switch ( input.LA(1) ) {
			case 19:
				{
				alt2=1;
				}
				break;
			case 28:
				{
				alt2=2;
				}
				break;
			case 22:
				{
				alt2=3;
				}
				break;
			case 13:
				{
				alt2=4;
				}
				break;
			case 10:
				{
				alt2=5;
				}
				break;
			case 16:
				{
				alt2=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:8: line
					{
					pushFollow(FOLLOW_line_in_list59);
					line();
					state._fsp--;

					}
					break;
				case 2 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:16: triangle
					{
					pushFollow(FOLLOW_triangle_in_list64);
					triangle();
					state._fsp--;

					}
					break;
				case 3 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:28: rectangle
					{
					pushFollow(FOLLOW_rectangle_in_list69);
					rectangle();
					state._fsp--;

					}
					break;
				case 4 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:41: curve
					{
					pushFollow(FOLLOW_curve_in_list74);
					curve();
					state._fsp--;

					}
					break;
				case 5 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:50: circle
					{
					pushFollow(FOLLOW_circle_in_list79);
					circle();
					state._fsp--;

					}
					break;
				case 6 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:16:60: ellipse
					{
					pushFollow(FOLLOW_ellipse_in_list84);
					ellipse();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list"



	// $ANTLR start "line"
	// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:1: line : 'LINE:' ( 'NAME' n= TEXT )? 'XSTART' l1= FLOAT 'YSTART' l2= FLOAT 'XEND' l3= FLOAT 'YEND' l4= FLOAT ( 'COLOR' l5= RGB )? ( 'WIDTH' l6= FLOAT )? ;
	public final void line() throws RecognitionException, IOException, SameNameError, ShapeLayoutError {
		Token n=null;
		Token l1=null;
		Token l2=null;
		Token l3=null;
		Token l4=null;
		Token l5=null;
		Token l6=null;

		try {
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:7: ( 'LINE:' ( 'NAME' n= TEXT )? 'XSTART' l1= FLOAT 'YSTART' l2= FLOAT 'XEND' l3= FLOAT 'YEND' l4= FLOAT ( 'COLOR' l5= RGB )? ( 'WIDTH' l6= FLOAT )? )
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:9: 'LINE:' ( 'NAME' n= TEXT )? 'XSTART' l1= FLOAT 'YSTART' l2= FLOAT 'XEND' l3= FLOAT 'YEND' l4= FLOAT ( 'COLOR' l5= RGB )? ( 'WIDTH' l6= FLOAT )?
			{
			match(input,19,FOLLOW_19_in_line95); 
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:17: ( 'NAME' n= TEXT )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==20) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:18: 'NAME' n= TEXT
					{
					match(input,20,FOLLOW_20_in_line98); 
					n=(Token)match(input,TEXT,FOLLOW_TEXT_in_line102); 
					Name=(n!=null?n.getText():null);
					}
					break;

			}

			match(input,36,FOLLOW_36_in_line108); 
			l1=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line112); 
			float xstart=Float.valueOf((l1!=null?l1.getText():null));
			match(input,43,FOLLOW_43_in_line116); 
			l2=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line120); 
			float ystart=Float.valueOf((l2!=null?l2.getText():null));
			match(input,34,FOLLOW_34_in_line124); 
			l3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line128); 
			float xend=Float.valueOf((l3!=null?l3.getText():null));
			match(input,41,FOLLOW_41_in_line132); 
			l4=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line136); 
			float yend=Float.valueOf((l4!=null?l4.getText():null));
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:214: ( 'COLOR' l5= RGB )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==11) ) {
				alt4=1;
			}
			
			String color = null;
			switch (alt4) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:215: 'COLOR' l5= RGB
					{
					match(input,11,FOLLOW_11_in_line141); 
					l5=(Token)match(input,RGB,FOLLOW_RGB_in_line145); 
					color=(l5!=null?l5.getText():null);
					}
					break;

			}

			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:257: ( 'WIDTH' l6= FLOAT )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==29) ) {
				alt5=1;
			}
			
			float width = 0;
			
			switch (alt5) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:19:258: 'WIDTH' l6= FLOAT
					{
					match(input,29,FOLLOW_29_in_line152); 
					l6=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line156); 
					width=Float.valueOf((l6!=null?l6.getText():null));
					}
					break;

			}
			
			if (color==null) {
				color = "#000000";
				}
			if (Name==null || Name=="No Name") {
					Name="No name";
				}else {
					if(names.contains(Name)) {
						throw new SameNameError();
					}else {
						names.add(Name);
					}
				}
				
			if (xstart==xend && ystart==yend) {
				throw new ShapeLayoutError();
			}
			
				G8.writeFile("	//" + Name);
				G8.writeFile("	context.beginPath();");
				G8.writeFile("	context.lineWidth = " + width + ";");
				G8.writeFile("	context.strokeStyle = '" + color + "';");
				G8.writeFile("	context.moveTo( " + xstart + ", " + ystart + ");");
				G8.writeFile("	context.lineTo( " + xend + ", " + yend + ");");
				G8.writeFile("	context.stroke();");
				G8.writeFile("	context.closePath();\n");
				Name="No Name";
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "line"



	// $ANTLR start "triangle"
	// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:1: triangle : 'TRIANGLE:' ( 'NAME' n= TEXT )? 'XA' t1= FLOAT 'YA' t2= FLOAT 'XB' t3= FLOAT 'YB' t4= FLOAT 'XC' t5= FLOAT 'YC' t6= FLOAT ( 'COLOR' t7= RGB )? ( 'WIDTH' t8= FLOAT )? ( 'COLORBODY' t9= RGB )? ;
	public final void triangle() throws RecognitionException, IOException, SameNameError, ShapeLayoutError {
		Token n=null;
		Token t1=null;
		Token t2=null;
		Token t3=null;
		Token t4=null;
		Token t5=null;
		Token t6=null;
		Token t7=null;
		Token t8=null;
		Token t9=null;

		try {
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:11: ( 'TRIANGLE:' ( 'NAME' n= TEXT )? 'XA' t1= FLOAT 'YA' t2= FLOAT 'XB' t3= FLOAT 'YB' t4= FLOAT 'XC' t5= FLOAT 'YC' t6= FLOAT ( 'COLOR' t7= RGB )? ( 'WIDTH' t8= FLOAT )? ( 'COLORBODY' t9= RGB )? )
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:13: 'TRIANGLE:' ( 'NAME' n= TEXT )? 'XA' t1= FLOAT 'YA' t2= FLOAT 'XB' t3= FLOAT 'YB' t4= FLOAT 'XC' t5= FLOAT 'YC' t6= FLOAT ( 'COLOR' t7= RGB )? ( 'WIDTH' t8= FLOAT )? ( 'COLORBODY' t9= RGB )?
			{
			match(input,28,FOLLOW_28_in_triangle176); 
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:25: ( 'NAME' n= TEXT )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==20) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:26: 'NAME' n= TEXT
					{
					match(input,20,FOLLOW_20_in_triangle179); 
					n=(Token)match(input,TEXT,FOLLOW_TEXT_in_triangle183); 
					Name=(n!=null?n.getText():null);
					}
					break;

			}

			match(input,30,FOLLOW_30_in_triangle189); 
			t1=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle193); 
			float xa=Float.valueOf((t1!=null?t1.getText():null));
			match(input,37,FOLLOW_37_in_triangle197); 
			t2=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle201); 
			float ya=Float.valueOf((t2!=null?t2.getText():null));
			match(input,31,FOLLOW_31_in_triangle205); 
			t3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle209); 
			float xb=Float.valueOf((t3!=null?t3.getText():null));
			match(input,38,FOLLOW_38_in_triangle213); 
			t4=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle217); 
			float yb=Float.valueOf((t4!=null?t4.getText():null));
			match(input,32,FOLLOW_32_in_triangle221); 
			t5=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle225); 
			float xc=Float.valueOf((t5!=null?t5.getText():null));
			match(input,39,FOLLOW_39_in_triangle229); 
			t6=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle233); 
			float yc=Float.valueOf((t6!=null?t6.getText():null));
			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:268: ( 'COLOR' t7= RGB )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==11) ) {
				alt7=1;
			}
			
			String color = null;
			switch (alt7) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:269: 'COLOR' t7= RGB
					{
					match(input,11,FOLLOW_11_in_triangle238); 
					t7=(Token)match(input,RGB,FOLLOW_RGB_in_triangle242); 
					color=(t7!=null?t7.getText():null);
					}
					break;

			}

			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:311: ( 'WIDTH' t8= FLOAT )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==29) ) {
				alt8=1;
			}
			
			float width = 0;
			switch (alt8) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:312: 'WIDTH' t8= FLOAT
					{
					match(input,29,FOLLOW_29_in_triangle249); 
					t8=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle253); 
					width=Float.valueOf((t8!=null?t8.getText():null));
					}
					break;

			}

			// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:355: ( 'COLORBODY' t9= RGB )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==12) ) {
				alt9=1;
			}
			
			String colorbody = null;
			switch (alt9) {
				case 1 :
					// D:\\Stefano\\Università\\Magistrale Bergamo\\Quinto Anno\\Linguaggi Formali e Compilatori\\Progetto\\G8new.g:31:356: 'COLORBODY' t9= RGB
					{
					match(input,12,FOLLOW_12_in_triangle260); 
					t9=(Token)match(input,RGB,FOLLOW_RGB_in_triangle264); 
					colorbody=(t9!=null?t9.getText():null);
					}
					break;

			}
				if (color==null) {
				color = "#000000";
				}
				if (Name==null || Name=="No Name") {
					Name="No name";
				}else {
					if(names.contains(Name)) {
						throw new SameNameError();
					}else {
						names.add(Name);
					}
				}
				
				if ((xa==xb && ya==yb)||(xb==xc && yb==yc)||(xa==xc && ya==yc)||(xa==xb && xb==xc)||(ya==yb && yb==yc)) {
						throw new ShapeLayoutError();
				}
				
				G8.writeFile("	//" + Name);
				G8.writeFile("	context.beginPath();");
				G8.writeFile("	context.lineWidth = " + width + ";");
				G8.writeFile("	context.strokeStyle = '" + color + "';");
				G8.writeFile("	context.moveTo(" + xa + ", " + ya + ");");
				G8.writeFile("	context.lineTo(" + xb + ", " + yb + ");");
				G8.writeFile("	context.lineTo(" + xc + ", " + yc + ");");
				G8.writeFile("	context.lineTo(" + xa + ", " + ya + ");");
				G8.writeFile("	context.stroke();");
				if (colorbody!=null) {
					G8.writeFile("	context.fillStyle= '" + colorbody + "';");
					G8.writeFile("	context.fill();");
					}
				G8.writeFile("	context.closePath();\n");
				Name="No Name";
						
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "triangle"



